# practice-khl-analyzer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  analyzer.py  commands.md  config.py  main.py  pyproject.toml  q.txt
data/: khl_2013_14.csv  khl_2014_15.csv  khl_2015_16.csv  khl_2016_17.csv  khl_2017_18.csv
models/: __init__.py  match_schema.py  standings.py
printers/: __init__.py  base.py  html.py  plain.py  pretty.py
utils/: task_extractor.py
